--- a/css/global.css
+++ b/css/global.css
@@ -144,7 +144,7 @@ a {
 
 header {
   height: 80px;
-  background-color: cyan;
+  background-color: rgb(229, 69, 55);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -175,5 +175,62 @@ header nav ul {
 }
 header nav ul a {
   font-size: 24px;
-  color: coral;
+  color: rgb(62, 227, 36);
+  font-family: "Darumadrop One", cursive;
+  text-shadow: 33px 19px 2px rgba(0, 190, 160, 0.6);
+}
+
+.s-1 {
+  background-color: lightblue;
+  height: 800px;
+}
+.s-1 .container {
+  height: 100%;
+  max-width: 1170px;
+  width: 100%;
+  margin: 0 auto;
+}
+.s-1 .container .card-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  height: 100%;
+}
+.s-1 .container .card-wrapper .card {
+  height: 300px;
+  width: 200px;
+  border: 2px solid black;
+  border-radius: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  padding: 20px;
+}
+.s-1 .container .card-wrapper .card button {
+  width: 50%;
+  aspect-ratio: 5/2;
+  border: 2px solid gray;
+  border-radius: 10px;
+  color: white;
+  background-color: lightpink;
 }/*# sourceMappingURL=global.css.map */
